# final-board-docker

./: README.MD  compose.yaml  docker-compose.yaml
.github/workflows/: main.yml
django-docker/: backend_django.dockerfile
django-docker/backend-django/: .coverage  pyproject.toml  pytest.ini
django-docker/backend-django/board/: models.py  urls.py  views.py
django-docker/backend-django/django_backend/: settings.py  urls.py
django-docker/backend-django/tests/board/: test_board_models.py  test_board_serializers.py  test_board_views.py  test_error_board.py
django-docker/backend-django/tests/test_output/: test_output_report_cov_1.xml
django-docker/backend-django/tests/users/: test_error_users.py  test_users_models.py  test_users_serializers.py  test_users_views.py
django-docker/backend-django/users/: serializers.py  urls.py  views.py
nginx-docker/: nginx_docker.dockerfile
nginx-docker/configs/: nginx.conf
svelte-docker/: frontend_svelte.dockerfile
svelte-docker/django-docker/: backend_django.dockerfile
svelte-docker/django-docker/backend-django/: db.sqlite3  pyproject.toml
svelte-docker/django-docker/backend-django/board/: serializers.py  urls.py
svelte-docker/django-docker/backend-django/tests/: test_views_old.py
svelte-docker/django-docker/backend-django/users/: models.py  urls.py
svelte-docker/frontend-svelte/: .env  package-lock.json  package.json  vite.config.js
svelte-docker/frontend-svelte/src/: App.svelte  main.js
svelte-docker/frontend-svelte/src/components/: Error.svelte  (+1 more)
svelte-docker/nginx-docker/: entrypoint.sh
(+23 files in other folders)
